#this is file etc/devices/Makefile.am
SUBDIRS = Altera_devices Xilinx_devices Lattice_devices NanoXplore_devices Generic_devices 
DIST_SUBDIRS = Altera_devices Xilinx_devices Lattice_devices NanoXplore_devices Generic_devices
EXTRA_DIST = characterize_all_devices.sh  characterize_device.sh  copy_characterization.sh  fix_characterization.sh


#do not touch the following line


